--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "browser-exporter",
+  "name": "browser-export",
   "description": "Sharing of client side and server side code solved once and for all.",
   "keywords": [
     "javascript",
     "asset management",
     "client-side",
     "depenency management",
-    "bundling",
+    "modules",
     "commonjs",
     "require"
   ],
   "version": "0.0.1",
-  "homepage": "https://CharlotteGore@github.com/CharlotteGore/Browser-Exporter.git",
+  "homepage": "https://github.com/CharlotteGore/browser-exporter.git",
   "author": {
     "name": "Charlotte Gore",
     "email": "conspiracygore@gmail.com",
@@ -25,7 +25,6 @@
     }
   ],
   "dependencies": {
-    "base-framework": "1.0.x",
     "underscore" : "1.3.x",
     "uglify-js" : "x"
   },
@@ -39,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/CharlotteGore/Browser-Exporter.git"
+    "url": "git@github.com:CharlotteGore/browser-exporter.git"
   },
   "engines": {
     "node": "*"
