cleaning this package up to test deployability

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "node": "*"
   },
   "_npmUser": {
-    "name": "CharlotteGore",
+    "name": "charlottegore",
     "email": "conspiracygore@gmail.com"
   }
 }
