--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   ],
   "dependencies": {
     "underscore" : "1.3.x",
-    "uglify-js" : "x"
+    "uglify-js" : "x",
+    "resolve" : "x" 
   },
   "devDependencies": {
     "mocha": "*",
