--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "commonjs",
     "require"
   ],
-  "version": "0.0.31",
+  "version": "0.0.33",
   "homepage": "https://github.com/CharlotteGore/browser-exporter.git",
   "author": {
     "name": "Charlotte Gore",
@@ -27,6 +27,7 @@
   "dependencies": {
     "underscore" : "1.3.x",
     "uglify-js" : "x",
+    "base-framework" : "x",
     "resolve" : "x" 
   },
   "devDependencies": {
